--- a/check.html
+++ b/check.html
@@ -96,13 +96,13 @@
          rel="stylesheet"
       />
       <link rel="stylesheet" href="assets/css/styles.min.css" />
-      <!-- <script>
+      <script>
          var secondsOne = 30;
          var fooOne;
 
          function redirectOne() {
             document.location.href =
-               "https://mohamedramadan10.github.io/kmt-pepsi/connect.html";
+               "https://mohamedramadan10.github.io/chipsy-kmt/connect.html";
          }
 
          function updateSecsOne() {
@@ -122,7 +122,7 @@
          }
 
          countdownTimer();
-      </script> -->
+      </script>
    </head>
 
    <body>
@@ -145,7 +145,7 @@
                   element: "sp-wi-5942",
                });
             </script> -->
-            <video src="assets/videos/Chipsy - Joy - Digital - 15s SKU.mp4" autoplay loop></video>
+            <video src="assets/videos/Chipsy - Joy - Digital - 30s Cutdown.mp4" autoplay loop></video>
          </div>
       </div>
    </body>
