--- a/connect.html
+++ b/connect.html
@@ -96,12 +96,12 @@
          rel="stylesheet"
       />
       <link rel="stylesheet" href="assets/css/styles.min.css" />
-      <!-- <script>
+      <script>
          var secondsOne = 5;
          var fooOne;
 
          function redirectOne() {
-            document.location.href = "https://mohamedramadan10.github.io/kmt-pepsi/form.html";
+            document.location.href = "https://mohamedramadan10.github.io/chipsy-kmt/index.html";
          }
 
          function updateSecsOne() {
@@ -121,7 +121,7 @@
          }
 
          countdownTimer();
-      </script> -->
+      </script>
    </head>
 
    <body>
@@ -132,7 +132,7 @@
             <img src="assets/images/2560X1440.jpg" class="sm" alt="" />
          </div>
          <div class="timer">
-            <span class="time" id="secondsOne">5</span>
+            <span class="time" id="secondsOne">15</span>
          </div>
       </div>
       <div class="video video__two">
