--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
          rel="stylesheet"
       />
       <link rel="stylesheet" href="assets/css/styles.min.css" />
-      <!-- <script>
+      <script>
       var secondsOne = 5;
       var fooOne;
 
       function redirectOne() {
-         document.location.href = "https://mohamedramadan10.github.io/kmt-pepsi/check.html";
+         document.location.href = "https://mohamedramadan10.github.io/chipsy-kmt/check.html";
       }
 
       function updateSecsOne() {
@@ -121,7 +121,7 @@
       }
 
       countdownTimer();
-   </script> -->
+   </script>
    </head>
 
    <body>
