--- a/connect.html
+++ b/connect.html
@@ -101,7 +101,7 @@
          var fooOne;
 
          function redirectOne() {
-            document.location.href = "https://mohamedramadan10.github.io/chipsy-kmt/index.html";
+            document.location.href = "https://www.youtube.com/watch?v=T2hKJIYCQag";
          }
 
          function updateSecsOne() {
