remove video third page

--- a/connect.html
+++ b/connect.html
@@ -144,7 +144,7 @@
                   element: "sp-wi-9052",
                });
             </script> -->
-            <video src="assets/videos/Chipsy - Joy - Digital - 15s SKU.mp4" autoplay loop controls muted></video>
+            <!-- <video src="assets/videos/Chipsy - Joy - Digital - 15s SKU.mp4" autoplay loop controls muted></video> -->
          </div>
       </div>
    </body>
