--- a/connect.html
+++ b/connect.html
@@ -101,7 +101,7 @@
          var fooOne;
 
          function redirectOne() {
-            document.location.href = "https://www.youtube.com/watch?v=T2hKJIYCQag";
+            document.location.href = "https://m.youtube.com/watch?v=J7SOfbFzY-E";
          }
 
          function updateSecsOne() {
