--- a/check.html
+++ b/check.html
@@ -145,7 +145,7 @@
                   element: "sp-wi-5942",
                });
             </script> -->
-            <video src="assets/videos/Chipsy - Joy - Digital - 30s Cutdown.mp4" autoplay loop controls muted></video>
+            <video src="assets/videos/Chipsy - Joy - Digital - 30s Cutdown.mp4" autoplay controls muted></video>
          </div>
       </div>
    </body>
