--- a/form.html
+++ b/form.html
@@ -41,7 +41,7 @@
          <img src="assets/images/bg_ver_ar.jpg" alt="" />
       </div>
       <div class="container">
-         <div class="heading">
+         <div class="heading__form">
             <h1>ادخل بياناتك</h1>
          </div>
          <form action="">
